# Steam_to_Notion

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
ngl/: client_v2.py  utils.py
ngl/core/: __init__.py
ngl/games/: steam.py
ngl/models/: base.py  steam.py
src/: client_v2.py  errors.py  logging_config.py  utils.py
src/api/steam/: README.md  main.py  pyproject.toml
src/api/steam/scripts/: live_api_test.py
src/api/steam/steamapi/: __init__.py  app.py  consts.py  core.py  decorators.py  errors.py  store.py  user.py
src/core/: __init__.py
src/games/: base.py  steam.py
src/models/: base.py  steam.py
